--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "node server.js --watch"
+    "start": "nodemon server.js"
   },
   "author": "",
   "license": "MIT",
